# QSSBuilder

./: .gitignore  README.md
QSSBuilder/: CMakeLists.txt  QSSBuilder_zh_CN.ts  builderwidget.cpp  builderwidget.h  builderwidget.ui  main.cpp
QSSBuilder/Items/Buttons/: item_checkbox.cpp  item_checkbox.h  item_checkbox.ui  item_pushbutton.cpp  item_pushbutton.h  item_pushbutton.ui  item_radiobutton.cpp  item_radiobutton.h  item_radiobutton.ui  item_toolbutton.cpp  item_toolbutton.h  item_toolbutton.ui
QSSBuilder/Items/Containers/: item_dockwidget.cpp  item_dockwidget.h  item_dockwidget.ui  item_frame.cpp  item_frame.h  item_frame.ui  item_groupbox.cpp  item_groupbox.h  item_groupbox.ui  item_mdiarea.cpp  item_mdiarea.h  item_mdiarea.ui  item_scrollarea.cpp  item_scrollarea.h  item_scrollarea.ui  item_stackedwidget.cpp  item_stackedwidget.h  item_stackedwidget.ui  item_tabwidget.cpp  item_tabwidget.h  item_tabwidget.ui  item_toolbox.cpp  item_toolbox.h  item_toolbox.ui
QSSBuilder/Items/DisplayWidgets/: item_calendarwidget.cpp  item_calendarwidget.h  item_calendarwidget.ui  item_graphicsview.cpp  item_graphicsview.h  item_graphicsview.ui  item_horizontalline.cpp  item_horizontalline.h  item_horizontalline.ui  item_label.cpp  item_label.h  item_label.ui  item_lcdnumber.cpp  item_lcdnumber.h  item_lcdnumber.ui  item_progressbar.cpp  item_progressbar.h  item_progressbar.ui  item_textbrowser.cpp  item_textbrowser.h  item_textbrowser.ui  item_verticalline.cpp  item_verticalline.h  item_verticalline.ui
QSSBuilder/Items/InputWidgets/: item_combobox.cpp  item_combobox.h  item_combobox.ui  item_dateedit.cpp  item_dateedit.h  item_dateedit.ui  item_dial.cpp  item_dial.h  item_dial.ui  item_doublespinbox.cpp  item_doublespinbox.h  item_doublespinbox.ui  item_fontcombobox.cpp  item_fontcombobox.h  item_fontcombobox.ui  item_horscrollbar.cpp  item_horscrollbar.h  item_horscrollbar.ui  item_horslider.cpp  item_horslider.h  item_horslider.ui  item_lineedit.cpp  item_lineedit.h  item_lineedit.ui  item_plaintextedit.cpp  item_plaintextedit.h  item_plaintextedit.ui  item_spinbox.cpp  item_spinbox.h  item_spinbox.ui  item_textedit.cpp  item_textedit.h  item_textedit.ui  item_timeedit.cpp  item_timeedit.h  item_timeedit.ui  item_verscrollbar.cpp  item_verscrollbar.h  item_verscrollbar.ui  item_verslider.cpp  (+2 more)
QSSBuilder/Items/ItemViews/: item_listview.cpp  item_listview.h  item_listview.ui  item_tableview.cpp  item_tableview.h  item_tableview.ui  item_treeview.cpp  item_treeview.h  item_treeview.ui
QSSBuilder/Items/ItemWidgets/: item_listwidget.cpp  item_listwidget.h  item_listwidget.ui  item_tablewidget.cpp  item_tablewidget.h  item_tablewidget.ui  item_treewidget.cpp  item_treewidget.h  item_treewidget.ui
QSSBuilder/Items/Widgets/: item_dialog.cpp  item_dialog.h  item_dialog.ui  item_widget.cpp  item_widget.h  item_widget.ui  item_window.cpp  item_window.h  item_window.ui
